# SenseCapConfig

./: .gitignore
ESP32/: sdkconfig  sdkconfig.old
ESP32/main/: ha_config.h  main.c  view_data.h
ESP32/main/controller/: indicator_controller.c  indicator_controller_ha.c
ESP32/main/model/: indicator_ha.c  indicator_ha_config.c  indicator_ha_config.h  indicator_sensor.c
ESP32/main/ui/: ui.c  ui.h  ui_albetacom.c  ui_albetacom.h  ui_events.c  ui_events.h  ui_hardcoded.c  ui_hardcoded.h
ESP32/main/ui/images/: ui_img_alarmdisarmed_png.c  ui_img_button_off_png.c  ui_img_button_on_png.c  ui_img_ceilingfanoff_png.c  ui_img_curtainclosed_png.c  ui_img_down_png.c  ui_img_lighton_png.c  ui_img_powerred_png.c  ui_img_shield_lock_png.c  ui_img_shutter_open_png.c  ui_img_shutter_png.c  ui_img_shutter_up_png.c  ui_img_up_png.c
ESP32/main/ui/screens/: ui_ha_alarm_keypad.c  ui_screen_ha_auto.c  ui_screen_ha_auto.h  ui_screen_ha_templates.c  ui_screen_ha_templates.h
ESP32/main/view/: indicator_view.c  indicator_view_ha.c
RP2040/: RP2040.ino
config/: ha_config copy.json
squareline/sq.albetacom/: README HOW TO EXPORT.txt  albetacom.sll  albetacom.spj  albetacom_events.py
squareline/sq.albetacom/export/ASIS/: lv_conf.h
squareline/sq.albetacom/export/ASIS/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_albetacom.c  ui_albetacom.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
squareline/sq.albetacom/export/ASIS/ui/components/: ui_comp_hook.c
squareline/sq.albetacom/export/ASIS/ui/images/: ui_img_acoff_png.c  ui_img_acon_png.c  ui_img_alarmarmedaway_png.c  ui_img_alarmarmedhome_png.c  ui_img_alarmdisarmed_png.c  ui_img_alarmwarning_png.c  ui_img_back_png.c  ui_img_background_png.c  ui_img_batterycharging_png.c  ui_img_batterynocharging_png.c  ui_img_ceilingfanoff_png.c  ui_img_ceilingfanon_png.c  ui_img_co2_png.c  ui_img_coverclosed_png.c  ui_img_coveropen_png.c  ui_img_curtainclosed_png.c  ui_img_curtainopen_png.c  ui_img_display_png.c  ui_img_down_png.c  ui_img_evcharger_png.c  ui_img_ha_logo32_png.c  ui_img_ha_logo_png.c  ui_img_high_light_png.c  ui_img_humidity_1_png.c  ui_img_humidity_2_png.c  ui_img_ic_co2_png.c  ui_img_ic_hum_png.c  ui_img_ic_switch1_off_png.c  ui_img_ic_switch1_on_png.c  ui_img_ic_switch2_off_png.c  ui_img_ic_switch2_on_png.c  ui_img_ic_temp_png.c  ui_img_ic_tvoc_png.c  ui_img_lightoff_png.c  ui_img_lighton_png.c  ui_img_location2_png.c  ui_img_location_png.c  ui_img_lock_png.c  ui_img_low_light_png.c  ui_img_setting_png.c  (+12 more)
squareline/sq.albetacom/export/ASIS/ui/screens/: ui_ha_alarm.c  ui_ha_alarm_keypad.c  ui_ha_covers.c  ui_ha_energy.c  ui_ha_ev_charge.c  ui_time.c
squareline/sq.small/: small_events.py
squareline/sq.small/export/ASIS/: CMakeLists.txt  (+2 more)
(+44 files in other folders)
