SET(SOURCES screens/ui_ha_alarm_keypad.c
    screens/ui_ha_ev_charge.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_teslamodel3_png.c
    images/ui_img_evcharger_png.c
    images/ui_img_919524860.c
    images/ui_img_acoff_png.c
    images/ui_img_acon_png.c
    images/ui_img_alarmarmedaway_png.c
    images/ui_img_alarmarmedhome_png.c
    images/ui_img_alarmdisarmed_png.c
    images/ui_img_alarmwarning_png.c
    images/ui_img_back_png.c
    images/ui_img_background_png.c
    images/ui_img_batterycharging_png.c
    images/ui_img_batterynocharging_png.c
    images/ui_img_ceilingfanoff_png.c
    images/ui_img_ceilingfanon_png.c
    images/ui_img_co2_png.c
    images/ui_img_coverclosed_png.c
    images/ui_img_coveropen_png.c
    images/ui_img_curtainclosed_png.c
    images/ui_img_curtainopen_png.c
    images/ui_img_display_png.c
    images/ui_img_down_png.c
    images/ui_img_ha_logo_png.c
    images/ui_img_ha_logo32_png.c
    images/ui_img_high_light_png.c
    images/ui_img_humidity_1_png.c
    images/ui_img_humidity_2_png.c
    images/ui_img_ic_co2_png.c
    images/ui_img_ic_hum_png.c
    images/ui_img_ic_switch1_off_png.c
    images/ui_img_ic_switch1_on_png.c
    images/ui_img_ic_switch2_off_png.c
    images/ui_img_ic_switch2_on_png.c
    images/ui_img_ic_temp_png.c
    images/ui_img_ic_tvoc_png.c
    images/ui_img_lightoff_png.c
    images/ui_img_lighton_png.c
    images/ui_img_location_png.c
    images/ui_img_location2_png.c
    images/ui_img_lock_png.c
    images/ui_img_low_light_png.c
    images/ui_img_powerred_png.c
    images/ui_img_setting_png.c
    images/ui_img_solargreen_png.c
    images/ui_img_temp_1_png.c
    images/ui_img_temp_2_png.c
    images/ui_img_time_png.c
    images/ui_img_tvoc_png.c
    images/ui_img_up_png.c
    images/ui_img_wifi_1_png.c
    images/ui_img_wifi_2_png.c
    images/ui_img_wifi_3_png.c
    images/ui_img_wifi_disconet_png.c
    images/ui_img_wifi_setting_png.c
    fonts/ui_font_font0.c
    fonts/ui_font_font2.c
    fonts/ui_font_font3.c
    fonts/ui_font_font4.c)

add_library(ui ${SOURCES})
